<?xml version="1.0"?>
<package format="3">
  <name>map_clock_simulator</name>
  <version>0.0.0</version>
  <description>The map_clock_simulator package</description>

  <maintainer email="reyk@todo.todo">reyk</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
  </export>
</package>
